# dsnd-dashboard-project

./: .sesskey  HOWTOREADME.md  MANIFEST.in  README.md  check_db.py  debug_dashboard.html  requirements.txt  setup.cfg
python-package/employee_events/: employee.py  query_base.py  sql_execution.py  team.py
report/: dashboard.py  utils.py
tests/: test_employee_events.py
