[metadata]
name = employee_events
version = 0.1.0
description = Employee events package (bundled DB for reviewer)

[options]
# tell setuptools to find packages under the python-package directory
packages = find:
package_dir =
    = python-package
include_package_data = true
install_requires =
    pandas

[options.packages.find]
where = python-package
